AC_INIT(profiler/gui-thread-check.c)
AM_INIT_AUTOMAKE(gui-thread-check, 0.1)
AC_PROG_CC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(PROFILER, mono-2 glib-2.0)

AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)
pkglibdir=$prefix/lib/gui-thread-check
AC_SUBST(pkglibdir)

AC_OUTPUT([
Makefile
profiler/Makefile
])


